// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Loading renders correctly 1`] = `
<div>
  <button
    class="css-1me5i3x-BaseButton-Button"
    data-testid="example"
    type="button"
  >
    <span>
      <span
        class="css-17k4jap-Button"
      >
        My button
      </span>
      <span
        aria-live="assertive"
      >
        <span
          aria-atomic="false"
          class="css-l3h06g-boxStyles-ButtonLoadingDots"
        >
          <span
            class="css-avudkd-VisuallyHidden"
          >
            Busy
          </span>
          <span
            aria-hidden="true"
            class="css-1jh80pg-boxStyles-LoadingDots"
          />
          <span
            aria-hidden="true"
            class="css-1meum3l-boxStyles-LoadingDots"
          />
          <span
            aria-hidden="true"
            class="css-2iv3wr-boxStyles-LoadingDots"
          />
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`Button Small Button renders correctly 1`] = `
<div>
  <button
    class="css-1fdo7nw-BaseButton-Button"
    data-testid="example"
    type="button"
  >
    <span>
      <span
        class="css-oobk4c-Button"
      >
        My button
      </span>
      <span
        aria-live="assertive"
      />
    </span>
  </button>
</div>
`;

exports[`Button With Icon renders correctly 1`] = `
<div>
  <button
    class="css-1me5i3x-BaseButton-Button"
    data-testid="example"
    type="button"
  >
    <span>
      <span
        class="css-oobk4c-Button"
      >
        My button
      </span>
      <span
        aria-live="assertive"
      />
    </span>
    <svg
      aria-hidden="true"
      class="css-9s3cfn-Icon"
      clip-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.5 19.1773C6.74319 17.9616 9.42279 17.0003 11.9999 17.0003C14.5769 17.0003 17.2567 17.9618 19.4999 19.1775M15.2053 9.95293C15.2036 10.4573 15.0723 10.9535 14.823 11.3977C14.5737 11.842 14.2141 12.2205 13.7759 12.5C13.3377 12.7794 12.8345 12.9511 12.3106 13C11.7867 13.0489 11.2584 12.9733 10.7722 12.7801C10.286 12.5869 9.85698 12.2819 9.52298 11.892C9.18899 11.5022 8.96036 11.0396 8.85721 10.545C8.75406 10.0504 8.7796 9.53905 8.93158 9.05615C9.08357 8.57326 9.35732 8.13367 9.72865 7.77621C10.1769 7.34467 10.7489 7.05056 11.372 6.93123C11.9951 6.81191 12.6412 6.87274 13.2281 7.10602C13.815 7.3393 14.3164 7.73449 14.6684 8.2414C15.0204 8.7483 15.2073 9.34403 15.2053 9.95293Z"
      />
      <circle
        cx="12"
        cy="12"
        r="10.5"
      />
    </svg>
  </button>
</div>
`;

exports[`Button renders correctly 1`] = `
<div>
  <button
    class="css-1me5i3x-BaseButton-Button"
    data-testid="example"
    type="button"
  >
    <span>
      <span
        class="css-oobk4c-Button"
      >
        My button
      </span>
      <span
        aria-live="assertive"
      />
    </span>
  </button>
</div>
`;

exports[`ButtonLink renders correctly 1`] = `
<div>
  <a
    class="css-oqbu2u-ButtonLink"
    data-testid="example"
    href="#"
  >
    My button link
  </a>
</div>
`;
